[gd_scene load_steps=9 format=3 uid="uid://cstmar211pvqk"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_dlrd2"]
[ext_resource type="Script" path="res://scripts/Story.gd" id="2_eu8vd"]
[ext_resource type="PackedScene" uid="uid://ct6362a458c6s" path="res://story/story_flow.tscn" id="3_b4k0s"]
[ext_resource type="Script" path="res://scripts/ui/NarrationDialog.gd" id="3_do1k0"]
[ext_resource type="Script" path="res://scripts/ui/ChoicesDialog.gd" id="4_um3na"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0j8i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_un0en"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_717vj"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="Game" type="Node"]
script = ExtResource("1_dlrd2")

[node name="Title Screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="New Game Button" type="Button" parent="Title Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -25.0
offset_right = 97.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="Label" type="Label" parent="Title Screen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 100.0
offset_right = 350.0
offset_bottom = 172.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Choose Your Own Adventure"

[node name="Story Screen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_eu8vd")
story_flow = ExtResource("3_b4k0s")

[node name="Narration Dialog" type="PanelContainer" parent="Story Screen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -543.0
offset_top = -608.0
offset_right = 544.0
offset_bottom = -322.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_do1k0")

[node name="MarginContainer" type="MarginContainer" parent="Story Screen/Narration Dialog"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Story Screen/Narration Dialog/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Story Screen/Narration Dialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "lorem ipsum dolor sit amet"
autowrap_mode = 2

[node name="Advance Button" type="Button" parent="Story Screen/Narration Dialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = ">"

[node name="Text Display Timer" type="Timer" parent="Story Screen/Narration Dialog"]
wait_time = 0.05

[node name="Choices Dialog" type="PanelContainer" parent="Story Screen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -543.0
offset_top = 60.0
offset_right = 544.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_um3na")

[node name="MarginContainer" type="MarginContainer" parent="Story Screen/Choices Dialog"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Choices" type="VBoxContainer" parent="Story Screen/Choices Dialog/MarginContainer"]
layout_mode = 2

[node name="Choice Button" type="Button" parent="Story Screen/Choices Dialog/MarginContainer/Choices"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_q0j8i")
theme_override_styles/hover = SubResource("StyleBoxFlat_un0en")
theme_override_styles/pressed = SubResource("StyleBoxFlat_717vj")
text = "Choice"
alignment = 0

[connection signal="pressed" from="Title Screen/New Game Button" to="." method="_on_new_game_button_pressed"]
[connection signal="END_OF_STORY" from="Story Screen" to="." method="_on_end_of_story"]
[connection signal="ADVANCE_BEAT" from="Story Screen/Narration Dialog" to="Story Screen" method="_on_advance_beat"]
[connection signal="pressed" from="Story Screen/Narration Dialog/MarginContainer/VBoxContainer/Advance Button" to="Story Screen/Narration Dialog" method="_on_advance_button_pressed"]
[connection signal="SELECTED" from="Story Screen/Choices Dialog" to="Story Screen" method="_on_choice_selected"]
